--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,11 @@
+# This is the specific application.properties for test mode.
+# See the other `application.properties` for definitions of these
+spring.cloud.gcp.sql.enabled=false
+spring.jpa.show-sql=true
+spring.jpa.generate-ddl=true
+spring.jpa.hibernate.ddl-auto=update
 
+# # Fake GCP credentials for use in tests
+# spring.cloud.gcp.project-id=fake-project-id
+# spring.cloud.gcp.credentials.location=classpath:fake-gcp-credentials.json
+# gcp-bucket-name=fake-bucket-name
