--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -1,9 +1,9 @@
-name: GitHub Actions Demo
+name: Gradle Actions Test
 on: 
   push: 
-    [main]
+    branches: [ main ]
   pull-request:
-    [main]
+    branches: [ main ]
 
 jobs:
   build:
