--- a/.github/workflows/linter.yml
+++ b/.github/workflows/linter.yml
@@ -15,10 +15,10 @@ name: Lint Code Base
 #############################
 on:
   push:
-    branches-ignore: [master, main]
+    branches: [ main ]
     # Remove the line above to run when pushing to master
   pull_request:
-    branches: [master, main]
+    branches: [ main ]
 
 ###############
 # Set the Job #
